# Aqua_trace_

./: .gitignore  README.md  bleach_detector.ipynb  coral_dataset.yaml  train_yolo.py
aqua_trace/: README.md  classifier.ipynb  coral_health_diagnosis.md  pyproject.toml  start_api.py  whatsapp_response.md
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_0/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_010/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_011/: args.yaml  results.csv
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_012/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_013/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_014/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_015/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_016/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_02/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_03/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_04/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_05/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_06/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_07/: args.yaml
aqua_trace/runs/classify/Optuna_YOLO_CLS/trial_08/: args.yaml
aqua_trace/src/: coral_health_diagnosis.md  whatsapp_response.md
aqua_trace/src/aqua_trace/: api_server.py  crew.py  main.py  whatsapp_bot.py
aqua_trace/src/aqua_trace/config/: agents.yaml  tasks.yaml
aqua_trace/src/aqua_trace/tools/: custom_tool.py
orchids-coral-reef-ai-intelligence-main/: .env.local  (+4 more)
(+2013 files in other folders)
