[project]
name = "aqua_trace"
version = "0.1.0"
description = "aqua_trace using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
aqua_trace = "aqua_trace.main:run"
run_crew = "aqua_trace.main:run"
train = "aqua_trace.main:train"
replay = "aqua_trace.main:replay"
test = "aqua_trace.main:test"
run_with_trigger = "aqua_trace.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
